# mcp-gh-code-review

./: .env.example  .gitignore  .releaserc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  package.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci-release.yml  ci.yml  codeql.yml  release.yml
config/: policy.example.yaml
docs/: architecture.md
src/mcp_server/: __init__.py  actions.py  bot_detector.py  classifier.py  cli.py  comment_classifier.py  config.py  context_schemas.py  graphql_client.py  jsonrpc.py  logging_config.py  orchestrator.py  pending_reviews_schemas.py  responder.py  review_schemas.py  schemas.py  server.py  smart_reply.py  storage.py  thread_analyzer.py  thread_manager.py  triage.py  webhooks.py
tests/: test_actions.py  test_bot_detector.py  test_classifier.py  test_cli_and_jsonrpc_integration.py  test_error_handling.py  test_repo_detection.py  test_server_tools.py  test_thread_manager.py  test_triage_responder.py  test_webhooks.py
